# paperless-ngx-cao-tools

./: .env.example  .gitignore  .pylintrc  LICENSE.md  README-TEST-DATA.md  README.md  pyproject.toml  pytest.ini
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation-change.md
.github/workflows/: bandit.yaml  pylint-ondemand.yml  test.yml
docs/: KEYWORDS-QUICKSTART.md  KEYWORDS.md  WATCHER.md  pngx-cao-watcher.service.example
src/pngx_cao/: __init__.py  cli.py  cli_utils.py  config.py
src/pngx_cao/api/: __init__.py  client.py
src/pngx_cao/commands/: keywords.py  taxonomy.py  upload.py  validate.py
src/pngx_cao/services/: keywords.py  taxonomy.py  upload.py  watcher.py
src/pngx_cao/utils/: constants.py  csv_reader.py
test/: README.md  __init__.py  test_config.py  test_constants.py  test_country_parentheses.py  test_csv_reader.py  test_keywords.py  test_reports.py  test_tag_parentheses.py  test_upload.py  test_watcher.py
test/data/: actors.csv  inactive.csv  motivations.csv  targeted_countries.csv  targeted_industries.csv
test/originals/TEST-2024-001/: TEST-2024-001.json
test/originals/TEST-2024-002/: TEST-2024-002.json
test/originals/TEST-2024-003/: TEST-2024-003.json
test/originals/TEST-2024-004/: TEST-2024-004.json
test/originals/TEST-2024-005/: TEST-2024-005.json
test/originals/empty-001/: empty-001.json
